[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.package]
license = "BSD-3"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"
serde = "1.0.145"
thiserror = { version = "1.0.37" }
cw-utils = "0.16.0"
cw-multi-test = "0.16.0"

airdropper = { path = "./contracts/airdropper" }
whitelist = { path = "./contracts/whitelist" }