[package]
name = "minter"
version = "0.1.0"
authors = ["whiskey <103599070+onewhiskeypls@users.noreply.github.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.9
"""

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-denom = { git = "https://github.com/DA0-DA0/dao-contracts", tag="v2.0.0-beta" }
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.37" }
url = "2.3.1"
rand_core = { version = "0.6", default-features = false }
rand_xoshiro = { version = "0.6.0", default-features = false }
shuffle = { git = "https://github.com/webmaster128/shuffle", branch = "rm-getrandom", version = "0.1.7" }
sha2 = "0.10.2"
cw721 = "0.16.0"
cw721-base = "0.16.0"
cw-utils = "0.16.0"
prost = "0.11.2"
airdropper = { path = "../airdropper", feature = ["library"] }
whitelist = { path = "../whitelist", feature = ["library"] }
cw20-base = {  version = "0.16", features = ["library"] }
cw20 = { version = "0.16" }

[dev-dependencies]
cw-multi-test = "0.16.0"
