[package]
name = "minter"
version = "0.1.0"
authors = ["whiskey <103599070+onewhiskeypls@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true, features = ["staking"] }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
cw-utils = { workspace = true }
airdropper = { workspace = true }
whitelist = { workspace = true }

cw-denom = { git = "https://github.com/DA0-DA0/dao-contracts", tag="v2.0.0-beta" }
url = "2.3.1"
rand_core = { version = "0.6", default-features = false }
rand_xoshiro = { version = "0.6.0", default-features = false }
shuffle = { git = "https://github.com/webmaster128/shuffle", branch = "rm-getrandom", version = "0.1.7" }
sha2 = "0.10.2"
cw721-base = "0.16.0"

[dev-dependencies]
cw-multi-test = { workspace = true }
