[package]
name = "cosm-orc-tests"
version = "0.0.1"
edition = "2021"

[dependencies]
cosm-orc = "2.7.0"
anyhow = { version = "1.0.51"}
cosmwasm-std = { version = "1.0.0", features = ["ibc3"] }
serde_json = "1.0"
env_logger = "0.9.0"
minter = { path = "../../contracts/minter", feature = ["library"] }